<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.ProfileFragment">


    <ImageView
        android:id="@+id/iv_settings"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="14dp"
        android:src="@drawable/main_ic_more_black_19dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/main_ic_logo_black_76dp"
        app:civ_border_color="#cdcdcd"
        app:civ_border_width="1dp"
        app:civ_circle_background_color="@color/main_colorGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_settings" />

    <com.example.base.customview.CustomFontTextView
        android:id="@+id/tv_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/main_profile_tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo"
        app:typeface="fzlLTypeface" />

    <com.example.base.customview.CustomFontTextView
        android:id="@+id/tv_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_favorites_grey"
        android:text="@string/main_favorites"
        android:drawablePadding="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/main_view"
        app:layout_constraintEnd_toStartOf="@+id/main_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/main_view"
        app:typeface="fzlLTypeface"/>

    <View
        android:id="@+id/main_view"
        android:layout_width="1px"
        android:layout_height="26dp"
        android:layout_marginTop="32dp"
        android:background="@color/main_colorGrayDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tip" />

    <com.example.base.customview.CustomFontTextView
        android:id="@+id/tv_cache"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/main_ic_cache_black_16dp"
        android:drawablePadding="5dp"
        android:text="@string/main_cache"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/main_view"
        app:layout_constraintTop_toTopOf="@+id/main_view"
        app:typeface="fzlLTypeface"/>

    <View
        android:id="@+id/main_view2"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="19dp"
        android:background="@color/main_colorGrayDark"
        app:layout_constraintTop_toBottomOf="@+id/main_view" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_view2" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.example.base.customview.CustomFontTextView
                android:id="@+id/tv_my_follow"
                android:layout_gravity="center_horizontal"
                android:text="@string/main_my_follow"
                style="@style/Eyepetizer.MineTextView"/>

            <com.example.base.customview.CustomFontTextView
                android:id="@+id/tv_watch_history"
                android:layout_gravity="center_horizontal"
                android:text="@string/main_watch_history"
                style="@style/Eyepetizer.MineTextView"/>

            <com.example.base.customview.CustomFontTextView
                android:id="@+id/tv_notification_toggle"
                android:layout_gravity="center_horizontal"
                android:text="@string/main_notification_toggle"
                style="@style/Eyepetizer.MineTextView"/>

            <com.example.base.customview.CustomFontTextView
                android:id="@+id/tv_my_badge"
                android:layout_gravity="center_horizontal"
                android:text="@string/main_my_badge"
                style="@style/Eyepetizer.MineTextView"/>

            <com.example.base.customview.CustomFontTextView
                android:id="@+id/tv_feedback"
                android:layout_gravity="center_horizontal"
                android:text="@string/main_feedback"
                style="@style/Eyepetizer.MineTextView"/>

            <com.example.base.customview.CustomFontTextView
                android:id="@+id/tv_contribution"
                android:layout_gravity="center_horizontal"
                android:text="@string/main_contribution"
                style="@style/Eyepetizer.MineTextView"/>

            <com.example.base.customview.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:layout_marginBottom="15dp"
                android:textSize="11sp"
                android:textColor="@color/main_colorGrayDark"
                android:layout_gravity="center_horizontal"
                android:text="@string/main_version"
                app:typeface="fzlLTypeface"
                tools:ignore="SmallSp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>