<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/actionBarSizeSecondary"
    android:background="@color/base_colorWhite"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    tool:ignore="ResourceName">

    <ImageView
        android:id="@+id/iv_calendar"
        android:layout_width="38.5dp"
        android:layout_height="38.5dp"
        android:padding="10dp"
        android:visibility="invisible"
        android:src="@drawable/main_ic_calendar_black_19dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout"
        style="@style/CustomTabLayoutStyle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/iv_search"
        app:layout_constraintStart_toEndOf="@+id/iv_calendar"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_home_tab1" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_home_tab2" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_home_tab3" />
    </com.google.android.material.tabs.TabLayout>

    <ImageView
        android:id="@+id/iv_search"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:padding="13dp"
        android:src="@drawable/main_ic_search_black_17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>