<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="42dp">

    <ImageView
        android:id="@+id/iv_home"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:layout_marginStart="24dp"
        android:src="@drawable/main_sel_home"
        app:layout_constraintBottom_toTopOf="@id/tv_home"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.base.customview.CustomFontTextView
        android:id="@+id/tv_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/main_home"
        android:textSize="8sp"
        android:textColor="@drawable/main_sel_bottom_navigation_text_color"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/iv_home"
        app:layout_constraintStart_toStartOf="@+id/iv_home"
        app:layout_constraintTop_toBottomOf="@+id/iv_home"
        app:typeface="fzlLTypeface"
        tools:ignore="SmallSp" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/btn_home"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="iv_home,tv_home"
        app:layout_constraintBottom_toBottomOf="@+id/tv_home"
        app:layout_constraintEnd_toEndOf="@+id/iv_home"
        app:layout_constraintStart_toStartOf="@+id/iv_home"
        app:layout_constraintTop_toTopOf="@+id/iv_home" />

    <com.example.base.customview.CustomFontTextView
        android:id="@+id/tv_community"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/main_community"
        android:textSize="8sp"
        android:textColor="@drawable/main_sel_bottom_navigation_text_color"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/iv_community"
        app:layout_constraintStart_toStartOf="@+id/iv_community"
        app:layout_constraintTop_toBottomOf="@+id/iv_community"
        app:typeface="fzlLTypeface"
        tools:ignore="SmallSp" />

    <ImageView
        android:id="@+id/iv_community"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:src="@drawable/main_sel_community"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/tv_community"
        app:layout_constraintEnd_toStartOf="@+id/iv_release"
        app:layout_constraintStart_toEndOf="@+id/iv_home"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/btn_community"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="iv_community,tv_community"
        app:layout_constraintBottom_toBottomOf="@+id/tv_community"
        app:layout_constraintEnd_toEndOf="@+id/iv_community"
        app:layout_constraintStart_toStartOf="@+id/iv_community"
        app:layout_constraintTop_toTopOf="@+id/iv_community" />

    <ImageView
        android:id="@+id/iv_release"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/btn_release_normal" />

    <com.example.base.customview.CustomFontTextView
        android:id="@+id/tv_notification"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/main_notification"
        android:textSize="8sp"
        android:textColor="@drawable/main_sel_bottom_navigation_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/iv_notification"
        app:layout_constraintStart_toStartOf="@+id/iv_notification"
        app:layout_constraintTop_toBottomOf="@+id/iv_notification"
        app:typeface="fzlLTypeface"
        tools:ignore="SmallSp" />

    <ImageView
        android:id="@+id/iv_notification"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:src="@drawable/main_sel_notification"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_notification"
        app:layout_constraintEnd_toStartOf="@+id/btn_profile"
        app:layout_constraintStart_toEndOf="@+id/iv_release"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/btn_notification"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="iv_notification,tv_notification"
        app:layout_constraintBottom_toBottomOf="@+id/tv_notification"
        app:layout_constraintEnd_toEndOf="@+id/iv_notification"
        app:layout_constraintStart_toStartOf="@+id/iv_notification"
        app:layout_constraintTop_toTopOf="@+id/iv_notification" />

    <com.example.base.customview.CustomFontTextView
        android:id="@+id/tv_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/main_profile"
        android:textSize="8sp"
        android:textColor="@drawable/main_sel_bottom_navigation_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/iv_profile"
        app:layout_constraintStart_toStartOf="@+id/iv_profile"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile"
        app:typeface="fzlLTypeface"
        tools:ignore="SmallSp" />

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:src="@drawable/main_sel_profile"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toTopOf="@id/tv_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/btn_profile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="iv_profile,tv_profile"
        app:layout_constraintBottom_toBottomOf="@+id/tv_profile"
        app:layout_constraintEnd_toEndOf="@+id/iv_profile"
        app:layout_constraintStart_toStartOf="@+id/iv_profile"
        app:layout_constraintTop_toTopOf="@+id/iv_profile" />
</androidx.constraintlayout.widget.ConstraintLayout>